styles.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');


html, body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100%;
    width: 100%;
    background: linear-gradient(135deg, rgb(35, 35, 37), rgb(28, 49, 105));
    font-family: 'Orbitron', sans-serif;
    margin: 0;

}

h1 {
    color: white;
    font-size: 50px;
    margin-bottom: 20px;
}

.board {
    display: grid;
    grid-template-columns: repeat(3, 100px);
    grid-template-rows: repeat(3, 100px);
    gap: 5px;
    
}

.cell {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100px;
    height: 100px;
    background-color: #eee;
    font-size: 5em;
    cursor: pointer;
    color: red;
    transition: transform 0.3s ease;
}   

.player-card {
    background: rgba(255, 255, 255, 0.25); /* translucent white background */
    backdrop-filter: blur(10px); /* backdrop-filter for blurring effect */
    border-radius: 10px; /* rounded corners */
    padding: 30px;
    margin-bottom: 30px;
    width: 300px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.player-card-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 2px;
    color: white;
    font-weight: bold;
    font-size: 20px;
}

input {
    width: 250px;
    height: 20px;
    border-radius: 10px;
    background-color: rgb(87, 85, 85);
}
select {
    background-color: rgb(87, 85, 85);
    color: white;
    width: 50px;
    height: 30px;
    text-align: center;
}
#setup {
    display: flex;
    flex-direction: column;
}
#startGame {
    height: 100px;
    border-radius: 10px;
    color: white;
    font-size: 40px;
    font-family: 'Orbitron';
    font-weight: bold;
    
    background: rgba(122, 233, 150, 0.521); /* translucent white background */
    backdrop-filter: blur(10px); /* backdrop-filter for blurring effect */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}
#status {
    color: white;
    font-size: 40px;
}
#reset,
#setup-btn {
    height: 100px;
    width: 200px;
    border-radius: 10px;
    color: white;
    font-size: 50px;
    font-family: 'Orbitron';
    font-weight: bold;
    margin-top: 0;
    
    background: rgba(122, 233, 150, 0.521); /* translucent white background */
    backdrop-filter: blur(10px); /* backdrop-filter for blurring effect */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
}

.cell.played::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(69, 8, 71, 0.342);
    animation: pop 0.3s ease-in backwards;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
    border-radius: 50px;
}

.fade-out {
    animation: fadeOut 0.5s ease forwards;
}

@keyframes pop {
    0% {
        transform: scale(0);
        opacity: 0;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

@keyframes fadeOut {
    0% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(0);
    }
}

.winning-cell {
    /* Adjust the styling to visually indicate the winning cells */
    background-color: rgba(255, 0, 0, 0.349); /* Example: Red border for winning cells */
}

@keyframes rainbow {
    0% { color: #ff0000; filter: hue-rotate(0deg); }
    16.66% { color: #ff7f00; filter: hue-rotate(60deg); }
    33.33% { color: #ffff00; filter: hue-rotate(120deg); }
    50% { color: #00ff00; filter: hue-rotate(180deg); }
    66.66% { color: #0000ff; filter: hue-rotate(240deg); }
    83.33% { color: #8b00ff; filter: hue-rotate(300deg); }
    100% { color: #ff0000; filter: hue-rotate(360deg); }
}

.rainbow-text {
    animation: rainbow 0.5s linear infinite;
}

.options {
    display: flex;
    gap:10px;
}

